--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     }
   ],
   "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "educoder/pest": "^1.0"
   },
   "autoload": {
     "psr-4": {
